# small-repo

./: .gitignore  CI_FAILURE_FIX_SUMMARY.md  CI_REMEDIATION_COMPLETE.md  KAFKA_WORKFLOW_FIX_REPORT.md  README.md  REMEDIATION_COMPLETE.md  REMEDIATION_SUMMARY.md  SONARQUBE_SETUP.md  dummy_file_6938f4d2-d139-4a85-9dc6-e6be6594d7ac.txt  dummy_file_87a5935a-b64b-43a4-ab2f-75c1e8f2061f.txt  dummy_file_8b9d8359-299c-4963-a3b8-30cf217ed034.txt  dummy_file_9058d25a-28b5-4475-97d7-5c80e18ae97f.txt  http_client.py  main.py  new_dummy_file.txt  port-gitops.py  port-gitops.sh  port.yml  pyproject.toml  readme.md  sample..csproj  sonar-project.properties  test_http_client.py  transport.py
.github/workflows/: KAFKA_WORKFLOW_SETUP.md  build.yaml  port-kafka.yaml  sync_custom_properties.yaml
dir_0_be07f1/: dummy_file_1b1511be-20af-4303-99d5-af4c78d2c1cd.txt  dummy_file_2f048027-3340-4482-a8a6-9d7627e1d05c.txt  dummy_file_934fc225-6412-49d5-9e8c-69f3181b6e64.txt  dummy_file_c0e41fd5-8dbd-4cd1-b715-4ec7f8dce0cc.txt  single.yml
